# graphene-ge2d

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
src/: __main__.py
src/graphene_ge2d/: __init__.py  __main__.py  _constantes.py  matrice_coef.py
src/graphene_ge2d/struc_bande/: _constantes.py  _runner.py  compute_eigenvalues.py  coquilles.py  generate_graph.py  matrice_coef.py  potentiel.py  sliders.py  write_matrix.py
src/graphene_ge2d/struc_bande/eigensolver/: Cargo.toml  Makefile  build.rs
src/graphene_ge2d/struc_bande/eigensolver/src/: main.rs
tests/: test_chemin.py  test_construction_matrice.py
