[tool.poetry]
name = "lebigdiag"
version = "0.1.0"
description = "Diagonalisation de la ma trice pour la structure de bans\bde"
authors = ["Dimitri <bond2102@usherbrooke.ca>"]

[tool.poetry.dependencies]
python = "^3.9, <3.10"
scipy = "<=1.7.3"
numpy = "^1.23.3"
pandas = "^1.4.4"
matplotlib = "^3.5.3"
sympy = "^1.11.1"
seaborn = "^0.12.0"
tqdm = "^4.64.1"
numba = "^0.56.2"
numba-scipy = "^0.3.1"

[tool.poetry.dev-dependencies]
pylint = "^2.15.2"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
