[tool.poetry]
name = "graphene-ge2d"
version = "0.1.0"
description = "Graphène artificiel dans un gaz electron 2d"
authors = [
	"Dimitri Bonanni-Surprenant <bond2102@usherbrooke.ca>",
]
readme = "README.md"
repository = "https://github.com/Duumbo/graphene-ge2d"

[tool.poetry.dependencies]
python = "^3.10, <3.11"
scipy = "<=1.7.3"
numpy = "^1.23.3"
pandas = "^1.4.4"
matplotlib = "^3.5.3"
sympy = "^1.11.1"
seaborn = "^0.12.0"
tqdm = "^4.64.1"
numba = "^0.56.2"
numba-scipy = "^0.3.1"

[tool.poetry.dev-dependencies]
pylint = "^2.15.2"
pytest = "^7.1.3"
flake8 = "^5.0.4"
coverage = "^6.4.4"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [".", "src" ]

