[package]
name = "eigensolver"
version = "0.1.0"
edition = "2021"
links = "lapack"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scilib = "0.5.0"
GSL = "4.0"
num-complex = "0.4.2"
lapack = "0.19.0"
lapack-src = "0.8.0"
lapack-sys = "0.14.0"

[build-dependencies]
pkg-config = "0.3.16"
